--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.xiaweizi.marqueetextview.MainActivity">
 
-    <TextView
+    <com.xiaweizi.marquee.MarqueeTextView
+        android:id="@+id/marquee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
+        app:scroll_mode="mode_forever"
+        app:scroll_interval="10000"
+        app:scroll_first_delay="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
